# VC_Projector

./: .gitignore  CMakeLists.txt  LICENSE.md
projector/: content.json  package.json
projector/blocks/: black0.json  black1.json  black10.json  black11.json  black12.json  black13.json  black14.json  black15.json  black2.json  black3.json  black4.json  black5.json  black6.json  black7.json  black8.json  black9.json  black_base.json  projector.json
projector/entities/: projector_entity.json
projector/items/: projector.item.json
projector/layouts/: projector.xml  projector.xml.lua
projector/models/: projector.mtl  tripod.mtl
projector/modules/: config.lua  display.lua  instance_limit.lua  rgb_addon.lua  synchronizer.lua
projector/scripts/: hud.lua  projector.lua  world.lua
projector/scripts/components/: projector.lua
projector/skeletons/: projector_skeleton.json
projector_rgb_addon/: content.json  package.json
projector_rgb_addon/blocks/: rgb_0.json  rgb_1.json  rgb_10.json  rgb_100.json  rgb_1000.json  rgb_1001.json  rgb_1002.json  rgb_1003.json  rgb_1004.json  rgb_1005.json  rgb_1006.json  rgb_1007.json  rgb_1008.json  rgb_1009.json  rgb_101.json  rgb_1010.json  rgb_1011.json  rgb_1012.json  rgb_1013.json  rgb_1014.json  rgb_1015.json  rgb_1016.json  rgb_1017.json  rgb_1018.json  rgb_1019.json  rgb_102.json  rgb_1020.json  rgb_1021.json  rgb_1022.json  rgb_1023.json  rgb_1024.json  rgb_1025.json  rgb_1026.json  rgb_1027.json  rgb_1028.json  rgb_1029.json  rgb_103.json  rgb_1030.json  rgb_1031.json  rgb_1032.json  (+4056 more)
src/: font_binary.cpp  font_binary.hpp  main.cpp
